// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show rollback should both stop the execution with exitOnError false since exitAfterRollback is independent: 0IT1rYAGLTZ6UNfsxrJCFMik9UrnEd7A-err 1`] = `[]`;

exports[`show rollback should both stop the execution with exitOnError false since exitAfterRollback is independent: 0IT1rYAGLTZ6UNfsxrJCFMik9UrnEd7A-exit 1`] = `[]`;

exports[`show rollback should both stop the execution with exitOnError false since exitAfterRollback is independent: 0IT1rYAGLTZ6UNfsxrJCFMik9UrnEd7A-out 1`] = `
[
  [
    "◼ Something with rollback.
",
  ],
  [
    "[2K[1A[2K[G◼ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ❯ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ I am trying to rollback stuff, previous action failed.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
]
`;

exports[`show rollback should both stop the execution with exitOnError true since exitAfterRollback is independent: 0IT1rYAGLTZ6UNfsxrJCFMik9UrnEd7A-err 1`] = `[]`;

exports[`show rollback should both stop the execution with exitOnError true since exitAfterRollback is independent: 0IT1rYAGLTZ6UNfsxrJCFMik9UrnEd7A-exit 1`] = `[]`;

exports[`show rollback should both stop the execution with exitOnError true since exitAfterRollback is independent: 0IT1rYAGLTZ6UNfsxrJCFMik9UrnEd7A-out 1`] = `
[
  [
    "◼ Something with rollback.
",
  ],
  [
    "[2K[1A[2K[G◼ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ❯ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ I am trying to rollback stuff, previous action failed.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
]
`;

exports[`show rollback should contunie execution or stop there with exitAfterRollback: false: 1cj9pfWF3xjiEk2FW1Rt13qVcfSY9sR8-err 1`] = `[]`;

exports[`show rollback should contunie execution or stop there with exitAfterRollback: false: 1cj9pfWF3xjiEk2FW1Rt13qVcfSY9sR8-exit 1`] = `[]`;

exports[`show rollback should contunie execution or stop there with exitAfterRollback: false: 1cj9pfWF3xjiEk2FW1Rt13qVcfSY9sR8-out 1`] = `
[
  [
    "◼ Something with rollback.
",
  ],
  [
    "[2K[1A[2K[G◼ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ❯ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ I am trying to rollback stuff, previous action failed.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
❯ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
✔ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
✔ This task will maybe execute.
",
  ],
]
`;

exports[`show rollback should contunie execution or stop there with exitAfterRollback: true: 1cj9pfWF3xjiEk2FW1Rt13qVcfSY9sR8-err 1`] = `[]`;

exports[`show rollback should contunie execution or stop there with exitAfterRollback: true: 1cj9pfWF3xjiEk2FW1Rt13qVcfSY9sR8-exit 1`] = `[]`;

exports[`show rollback should contunie execution or stop there with exitAfterRollback: true: 1cj9pfWF3xjiEk2FW1Rt13qVcfSY9sR8-out 1`] = `
[
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G◼ Something with rollback.
",
  ],
  [
    "[2K[1A[2K[G◼ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ❯ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task will fail.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ I am trying to rollback stuff, previous action failed.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will maybe execute.
",
  ],
]
`;

exports[`show rollback should rollback the main task if any of the subtasks fail: 4SIhMkI14b8s2hW1esiORoa1UINGHwAr-err 1`] = `[]`;

exports[`show rollback should rollback the main task if any of the subtasks fail: 4SIhMkI14b8s2hW1esiORoa1UINGHwAr-exit 1`] = `[]`;

exports[`show rollback should rollback the main task if any of the subtasks fail: 4SIhMkI14b8s2hW1esiORoa1UINGHwAr-out 1`] = `
[
  [
    "◼ Something with rollback.
",
  ],
  [
    "[2K[1A[2K[G◼ Something with rollback.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ❯ This task will fail.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task will fail.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Something with rollback.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ I am trying to rollback stuff, previous action failed.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "← Some actions required rollback stuff.
  ✖ This task failed after 2 seconds.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
]
`;

exports[`show rollback should rollback the subtask if the subtask itself fails: vnT6mmZ5GtNqgXaPHqXxTIpDm5sltAZx-err 1`] = `[]`;

exports[`show rollback should rollback the subtask if the subtask itself fails: vnT6mmZ5GtNqgXaPHqXxTIpDm5sltAZx-exit 1`] = `[]`;

exports[`show rollback should rollback the subtask if the subtask itself fails: vnT6mmZ5GtNqgXaPHqXxTIpDm5sltAZx-out 1`] = `
[
  [
    "◼ Something with rollback.
",
  ],
  [
    "[2K[1A[2K[G◼ Something with rollback.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ◼ This task will fail.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ❯ This task will fail.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ⚠ This task will fail.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ⚠ I am trying to rollback stuff, previous action failed.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ⚠ Some actions required rollback stuff.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ Something with rollback.
  ← Some actions required rollback stuff.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "❯ Something with rollback.
  ← Some actions required rollback stuff.
  ◼ This task will execute.
◼ This task will never execute.
",
  ],
]
`;